# wiil-python

./: .gitignore  README.md  pyproject.toml  setup.py
scripts/: README.md  __init__.py  commit_script.py  tag_script.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py
tests/unit/resources/: __init__.py
tests/unit/resources/account/: test_organizations.py  test_projects.py
tests/unit/resources/business_mgt/: __init__.py  test_business_services.py  test_customers.py  test_menu_orders.py  test_menus.py  test_product_orders.py  test_products.py  test_reservation_resources.py  test_reservations.py  test_service_appointments.py
tests/unit/resources/service_mgt/: __init__.py  test_agent_configs.py  test_conversation_configs.py  test_deployment_channels.py  test_deployment_configs.py  test_instruction_configs.py  test_knowledge_sources.py  test_phone_configs.py  test_provisioning_configs.py  test_telephony_provider.py  test_translation_sessions.py
wiil/: __init__.py
wiil/client/: __init__.py  http_client.py  types.py  wiil_client.py
wiil/errors/: __init__.py  exceptions.py
wiil/models/: __init__.py  base.py
wiil/models/account/: __init__.py  organization.py  project.py
wiil/models/business_mgt/: __init__.py  customer.py  menu_config.py  menu_order.py  order.py  product_config.py  product_order.py  reservation.py  reservation_resource.py  service_appointment.py  service_config.py  service_person.py
wiil/models/conversation/: __init__.py  conversation_config.py  conversation_message.py  translation_config.py  translation_conversation.py
wiil/models/service_mgt/: __init__.py  agent_config.py  call_transfer_config.py  deployment_channels.py  deployment_config.py  instruction_config.py  knowledge.py  phone_config.py  phone_number.py  provisioning_config.py  support_llm.py  voice_language.py
wiil/resources/: __init__.py
wiil/resources/account/: __init__.py  organizations.py  projects.py
wiil/resources/business_mgt/: __init__.py  business_services.py  customers.py  menu_orders.py  menus.py  product_orders.py  products.py  reservation_resources.py  reservations.py  service_appointments.py
wiil/resources/service_mgt/: __init__.py  agent_configs.py  conversation_configs.py  deployment_channels.py  deployment_configs.py  instruction_configs.py  knowledge_sources.py  phone_configs.py  provisioning_configs.py  support_models.py  telephony_provider.py  translation_sessions.py
wiil/types/: __init__.py  account_types.py  business_types.py  conversation_types.py  knowledge_types.py  paginated_quest.py  paginated_result.py  service_types.py
